--- a/Grafana-Loki.yaml
+++ b/Grafana-Loki.yaml
@@ -49,3 +49,15 @@ services:
       - "3000:3000"
     networks:
       - loki
+      
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    command:
+      - '--config.file=/etc/prometheus/prometheus.yml'
+    ports:
+      - 9090:9090
+    restart: unless-stopped
+    volumes:
+      - ./prometheus:/etc/prometheus
+      - prom_data:/prometheus
