--- a/Jaeger-HotROD-2.yaml
+++ b/Jaeger-HotROD-2.yaml
@@ -27,6 +27,21 @@ services:
     volumes:
       - esdata:/usr/share/elasticsearch/data
 
+  hotrod:
+    image: jaegertracing/example-hotrod:latest
+    ports: 
+      - "8080:8080"
+    command: ["all"]
+    environment:
+      - JAEGER_AGENT_HOST=jaeger-agent
+      # Note: if your application is using Node.js Jaeger Client, you need port 6832,
+      #       unless issue https://github.com/jaegertracing/jaeger/issues/1596 is resolved.
+      - JAEGER_AGENT_PORT=6831
+    networks:
+      - elastic-jaeger
+    depends_on:
+      - jaeger
+
 volumes:
   esdata:
     driver: local
