--- a/5-ELK-Stack.yaml
+++ b/5-ELK-Stack.yaml
@@ -4,7 +4,7 @@ services:
 
   elasticsearch:
     image: elasticsearch:7.16.1
-    container_name: es
+    container_name: elasticsearch
     environment:
       discovery.type: single-node
       ES_JAVA_OPTS: "-Xms512m -Xmx512m"
@@ -22,7 +22,7 @@ services:
 
   logstash:
     image: logstash:7.16.1
-    container_name: log
+    container_name: logstash
     environment:
       discovery.seed_hosts: logstash
       LS_JAVA_OPTS: "-Xms512m -Xmx512m"
@@ -43,7 +43,7 @@ services:
 
   kibana:
     image: kibana:7.16.1
-    container_name: kib
+    container_name: kibana
     ports:
       - "5601:5601"
     depends_on:
