--- a/6-MS-Sql.yaml
+++ b/6-MS-Sql.yaml
@@ -2,6 +2,7 @@ version: '3'
 services:
   mssql:
     container_name: mssql-db
+    user: root
     hostname: mssql-db
     image: mcr.microsoft.com/mssql/server:2022-latest
     environment:
