--- a/6-MS-Sql.yaml
+++ b/6-MS-Sql.yaml
@@ -17,3 +17,4 @@ services:
       - ./data:/var/opt/mssql/data
       - ./log:/var/opt/mssql/log
       - ./secrets:/var/opt/mssql/secrets
+    restart: 'unless-stopped'
