--- a/Docker/customdata-docker-compose.yaml
+++ b/Docker/customdata-docker-compose.yaml
@@ -1,18 +1,9 @@
 version: '3'
-
+name: customdata-stack
 services:
-  redis:
-    container_name: 'redis-stack'
-    image: 'redis/redis-stack'
-    volumes:
-      - './redis:/var/lib/redis'
-    ports:
-      - '6379:6379'
-      - '8001:8001'
-    restart: 'unless-stopped'
 
   rabbitmq:
-    container_name: 'rabbitmq'
+    container_name: 'customdata-stack-rabbitmq'
     image: 'rabbitmq:management'
     environment:
       RABBITMQ_DEFAULT_USER: 'guest'
@@ -24,6 +15,7 @@ services:
     restart: 'unless-stopped'
 
   seq:
+    container_name: 'customdata-stack-seq'
     image: datalust/seq
     ports:
       - 8003:80
@@ -33,9 +25,19 @@ services:
     environment:
       ACCEPT_EULA: "Y"
     restart: 'unless-stopped'
+
+  redis:
+    container_name: 'customdata-stack-redis-stack'
+    image: 'redis/redis-stack'
+    volumes:
+      - './redis:/var/lib/redis'
+    ports:
+      - '6379:6379'
+      - '8001:8001'
+    restart: 'unless-stopped'
     
   loki:
-    container_name: loki
+    container_name: 'customdata-stack-loki'
     image: grafana/loki:latest
     ports:
       - "3100:3100"
@@ -50,7 +52,7 @@ services:
       start_period: 10s
 
   promtail:
-    container_name: promtail
+    container_name: 'customdata-stack-promtail'
     image: grafana/promtail:latest
     ports:
       - "9080:9080"
@@ -58,6 +60,7 @@ services:
       - ./promtail-config/config.yaml:/etc/promtail/config.yaml
   
   prometheus:
+    container_name: 'customdata-stack-prometheus'
     image: prom/prometheus:latest
     ports:
       - "9090:9090"
@@ -67,7 +70,7 @@ services:
     - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
 
   grafana:
-    container_name: grafana
+    container_name: 'customdata-stack-grafana'
     image: grafana/grafana:latest
     # volumes:
     #   - ./grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
@@ -78,4 +81,4 @@ services:
       - gf_auth_anonymous_enabled=true
       - gf_auth_anonymous_org_role=admin
     depends_on:
-      - loki
+      - customdata-stack-loki
