--- a/Docker/customdata-slim-docker-compose.yaml
+++ b/Docker/customdata-slim-docker-compose.yaml
@@ -1,21 +1,20 @@
-version: '3'
+version: "3"
 name: customdata-stack
 services:
-
   rabbitmq:
-    container_name: 'customdata-stack-rabbitmq'
-    image: 'rabbitmq:management'
+    container_name: "customdata-stack-rabbitmq"
+    image: "rabbitmq:management"
     environment:
-      RABBITMQ_DEFAULT_USER: 'guest'
-      RABBITMQ_DEFAULT_PASS: 'guest'
-      RABBITMQ_DEFAULT_VHOST: '/'
+      RABBITMQ_DEFAULT_USER: "guest"
+      RABBITMQ_DEFAULT_PASS: "guest"
+      RABBITMQ_DEFAULT_VHOST: "/"
     ports:
-      - '15672:15672'
-      - '5672:5672'
-    restart: 'unless-stopped'
+      - "15672:15672"
+      - "5672:5672"
+    restart: "unless-stopped"
 
   seq:
-    container_name: 'customdata-stack-seq'
+    container_name: "customdata-stack-seq"
     image: datalust/seq
     ports:
       - 8003:80
@@ -24,5 +23,4 @@ services:
       - /data/seq:/data
     environment:
       ACCEPT_EULA: "Y"
-    restart: 'unless-stopped'
-    
+    restart: "unless-stopped"
